# research-skills-kit

./: .gitignore  .gitmodules  LICENSE  NOTICE.md  README.md  pyproject.toml
docs/: README.md  upstream_forks_and_submodules.md
docs/assessment/: research_skill_evaluation_report.md  skill_fork_improvement_candidates.md
docs/progress/: research_skills_implementation_progress.md
docs/raw/evaluation/: README.md  run_penguins_skill_eval.py
docs/raw/evaluation/outputs/: anova_body_mass_by_species.csv  ars_experiment_validation_report.md  citation_online_references.bib  citation_online_report.json  citation_online_report.md  run_summary.json  (+10 more)
docs/raw/openvideo/: source_manifest.md
docs/sources/: openvideo_douyin_research_skills_analysis.md  openvideo_douyin_skills_github_repos.md
scripts/: list_upstream_skills.py  sync_upstream_forks.sh
skills/research-citation-check/: SKILL.md
skills/research-citation-check/scripts/: citation_check.py
skills/research-eda/: SKILL.md
skills/research-eda/scripts/: research_eda.py
skills/research-figure/: SKILL.md
skills/research-figure/scripts/: figure_qa.py  research_figure.py
skills/research-power/: SKILL.md
skills/research-power/scripts/: research_power.py
skills/research-results-audit/: SKILL.md
skills/research-results-audit/scripts/: results_audit.py
skills/research-statistics/: SKILL.md
skills/research-statistics/scripts/: research_statistics.py
skills/research-upstream-router/: SKILL.md
skills/research-upstream-router/scripts/: list_upstream_skills.py
tests/: router_tool_test.py  smoke_test.py
